<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/burgandy"
    tools:context=".BikeManagerMain">

    <RelativeLayout
        android:id="@+id/left_panel"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/ascent"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@android:color/black">

            <TextView
                android:id="@+id/ascent_val"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:gravity="left"
                android:text="@string/ascent_val"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/ascent_val"
                android:layout_marginLeft="2dp"
                android:gravity="left|top"
                android:text="@string/ascent_label"
                android:textColor="@color/burgundy" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/temp"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_below="@+id/ascent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/temp_val"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:gravity="left"
                android:text="@string/temperature_val"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/temp_val"
                android:layout_marginLeft="2dp"
                android:gravity="left|top"
                android:text="@string/temperature_label"
                android:textColor="@color/burgundy" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dist"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_below="@+id/temp"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/dist_val"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/small_unit"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dist_unit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignBaseline="@id/dist_val"
                android:layout_toRightOf="@id/dist_val"
                android:gravity="bottom|left"
                android:text="@string/km"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/dist_val"
                android:gravity="center|top"
                android:text="@string/distance_label"
                android:textColor="@color/burgundy" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/speed"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/temp"
            android:gravity="center">

            <TextView
                android:id="@+id/major_val"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="right"
                android:text="00"
                android:textColor="@android:color/white"
                android:textSize="150sp" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="20dp"
                android:layout_height="80dp"
                android:layout_alignBaseline="@+id/major_val"
                android:layout_toRightOf="@id/major_val"
                android:gravity="center"
                android:text="."
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/units"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_alignBaseline="@+id/major_val"
                android:layout_toRightOf="@id/separator"
                android:gravity="left|bottom"
                android:text="@string/kmph"
                android:textColor="@color/burgundy"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/minor_val"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_above="@id/minor_val"
                android:layout_toRightOf="@id/separator"
                android:fontFamily="sans-serif-thin"
                android:gravity="center|left|bottom"
                android:text="@string/speed_minor_unit"
                android:textColor="@color/grey"
                android:textSize="50sp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/right_panel"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#F1ECD6">

        <FrameLayout
            android:id="@+id/compassContainer"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:layout_marginLeft="15dp">

            <ImageView
                android:id="@+id/compass"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/compass" />

            <ImageView
                android:id="@+id/direction"
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:scaleType="matrix" />
        </FrameLayout>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/compassContainer"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:text="@string/street"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/directionHint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/address"
            android:layout_marginRight="10dp"
            android:gravity="center|right|top"
            android:text="@string/turn_right"
            android:textColor="@color/burgundy"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/aheadDistance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/directionHint"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:text="250"
            android:textColor="@color/burgundy"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/unitMeter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/aheadDistance"
            android:layout_marginRight="10dp"
            android:gravity="center|right|top"
            android:text="@string/meter"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

</FrameLayout>
